--- a/CoditechLicenseApplication.BusinessLogicLayer/CoditechLicenseApplication.BusinessLogicLayer.csproj
+++ b/CoditechLicenseApplication.BusinessLogicLayer/CoditechLicenseApplication.BusinessLogicLayer.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseBusinessLogic.cs" />
-    <Compile Include="ProductMasterBA.cs" />
+    <Compile Include="ApplicationLicenseDetailsBA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserMasterBA.cs" />
   </ItemGroup>
