--- a/CoditechLicenseApplication.ViewModel/CoditechLicenseApplication.ViewModel.csproj
+++ b/CoditechLicenseApplication.ViewModel/CoditechLicenseApplication.ViewModel.csproj
@@ -50,8 +50,8 @@
   <ItemGroup>
     <Compile Include="ControlViewModel\DropdownViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModel\GeneralMaster\ProductMaster\ProductMasterListViewModel.cs" />
-    <Compile Include="ViewModel\GeneralMaster\ProductMaster\ProductMasterViewModel.cs" />
+    <Compile Include="ViewModel\GeneralMaster\ApplicationLicenseDetails\ApplicationLicenseDetailsListViewModel.cs" />
+    <Compile Include="ViewModel\GeneralMaster\ApplicationLicenseDetails\ApplicationLicenseDetailsViewModel.cs" />
     <Compile Include="ViewModel\PageListViewModel.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\Login\UserLoginViewModel.cs" />
