--- a/CoditechLicenseApplication/CoditechLicenseApplication.csproj
+++ b/CoditechLicenseApplication/CoditechLicenseApplication.csproj
@@ -155,6 +155,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Images\active.svg" />
+    <Content Include="Content\Images\inactive.png" />
     <Content Include="Images\ApplicationLogo.png" />
     <Content Include="Images\main-bg-v3.png" />
     <Content Include="Images\no-image.jpg" />
